--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <div id="root">
     <!-- kontener na aplikację react  -->
   </div>
-  <!-- <script crossorigin src="https://unpkg.com/react/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> -->
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-  <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+  <!-- <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script> -->
   <!-- Don't use this in production: -->
-  <script src="https://unpkg.com/@babel/standalone/babel.js"></script>
+  <!-- <script src="https://unpkg.com/@babel/standalone/babel.js"></script> -->
 
 
 
