--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 
-  <script type="text/babel" src="App.js"></script>
+  <script type="text/babel" src="./App.js"></script>
 </body>
 
 </html>
