--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-  <div id="root">
+  
     <!-- kontener na aplikację react  -->
-  </div>
+  
   <!-- <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> -->
@@ -28,7 +28,7 @@
 
 
 
-  <script type="text/babel" src="./App.js"></script>
+  <script type="text/babel" src="./App.js"><div id="root"></div></script>
 </body>
 
 </html>
