--- a/index.html
+++ b/index.html
@@ -14,21 +14,13 @@
   <div id="root">
     <!-- kontener na aplikację react  -->
   </div>
-  <!-- <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
-<script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
-<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> -->
-  <!-- <script crossorigin src="https://unpkg.com/react/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> -->
 
   <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   <!-- Don't use this in production: -->
   <script src="https://unpkg.com/@babel/standalone/babel.js"></script>
 
-
-
-  <script type="text/babel" src="./App.js"></script>
+  <script type="text/babel" src="./app.js"></script>
 </body>
 
 </html>
